[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "blueno"
dynamic = ["version"]
description = "A Python ETL library for creating declarative data pipelines."
authors = [
    { name = "Jimmy Jensen" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["etl", "deltalake", "polars", "delta-rs", "fabric", "Microsoft", "azure"]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "croniter>=6.0.0",
    "cyclopts>=3.16.1",
    "deltalake>1.0.0",
    "polars>1.37.0",
    "psutil>=7.0.0",
    "typing-extensions>=4.14.1",
]

[project.urls]
Repository = "https://github.com/mrjsj/blueno"


[project.scripts]
blueno = "blueno.cli:main"

[project.optional-dependencies]
azure = [
    "azure-identity>=1.17.0",
]

[tool.setuptools_scm]

[tool.ruff]
line-length = 100
include = ["src/**/*.py"]
exclude = ["examples/**/*.py"]


[tool.ruff.lint]
extend-select = ["Q001", "I001", "G004", "D"]
ignore = ["D100"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
log_cli = true
log_cli_level = "INFO"

[dependency-groups]
duckdb = [
    "duckdb",
    "pyarrow"
]
docs = [
    "markdown-include-variants>=0.0.4",
    "mdx-include>=1.4.2",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-include-dir-to-nav>=1.2.0",
    "mkdocs-macros-plugin>=1.3.9",
    "mkdocs-material>=9.6.19",
    "mkdocstrings-python>=1.18.2",
    "pytest>=8.4.2",
    "pytest-markdown-docs>=0.9.0",
]
dev = [
    "freezegun>=1.5.5",
    "graphviz>=0.21.0",
    "hypothesis>=6.138.15",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.0",
    "ruff>=0.13.0",
    "ty>=0.0.1a20",
]
